# firebase-api_gateway-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env.json.example  template.yaml
.devcontainer/: devcontainer.json
deploy/lambda/: Dockerfile  local.dockerfile
src/: lib.rs
src/controller/: controller.rs  health_check.rs  lambda_http.rs  mod.rs  usecase.rs  users_me.rs
src/firebase/: mod.rs  validate_token.rs
src/lambda/: http.rs
src/router/: health_check.rs  http_router.rs  mod.rs  users_me.rs
src/usecase/: health_check.rs  mod.rs  users_me.rs
